--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Stanislaw Jarocki",
   "license": "MIT",
   "dependencies": {
+    "diacritics": "^1.3.0",
+    "docxtemplater": "^3.47.4",
     "dotenv": "^16.4.5",
-    "libreoffice-convert": "^1.5.1"
+    "libreoffice-convert": "^1.5.1",
+    "pizzip": "^3.1.7",
+    "readline-sync": "^1.4.10"
   }
 }
