--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "diacritics": "^1.3.0",
     "docxtemplater": "^3.47.4",
     "dotenv": "^16.4.5",
+    "easy-pdf-merge": "^0.2.6",
     "libreoffice-convert": "^1.5.1",
     "pizzip": "^3.1.7",
     "readline-sync": "^1.4.10"
